--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harmony-staking-sdk",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "Harmony Staking SDK",
   "source": "src/index.ts",
   "main": "lib/main.js",
@@ -43,7 +43,7 @@
   "bugs": {
     "url": "https://github.com/harmony-one/staking-sdk/issues"
   },
-  "homepage": "https://github.com/harmony-one/staking-sdk/issues#readme",
+  "homepage": "https://github.com/harmony-one/staking-sdk",
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
@@ -57,7 +57,10 @@
     "jest": "^29.3.1",
     "parcel": "^2.8.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
+    "stream-browserify": "^3.0.0"
   },
   "dependencies": {
     "@harmony-js/crypto": "^0.1.56",
